リファクタリング1

--- a/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
+++ b/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
@@ -68,16 +68,24 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\SearchResult.cs" />
+    <Compile Include="Models\Settings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Services\ExcelInteropService.cs" />
+    <Compile Include="Services\ExcelSearchService.cs" />
+    <Compile Include="Services\LogService.cs" />
+    <Compile Include="Services\SettingsService.cs" />
+    <Compile Include="Services\ShapeTextExtractor.cs" />
+    <Compile Include="Utilities\ExcelUtils.cs" />
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
