--- a/.NET/SimpleExcelGrep/App.config
+++ b/.NET/SimpleExcelGrep/App.config
@@ -18,5 +18,11 @@
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
+    <!-- ガベージコレクションの最適化 -->
+    <gcServer enabled="true"/>
+    <gcConcurrent enabled="true"/>
+    <!-- 大きなオブジェクトヒープの圧縮を有効化 -->
+    <gcAllowVeryLargeObjects enabled="true"/>
+    <GCLOHCompactionMode>1</GCLOHCompactionMode>
   </runtime>
 </configuration>
