--- a/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
+++ b/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
@@ -76,6 +76,18 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MainForm.Event.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Grid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Search.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Tsv.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Program.cs" />
