--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ignore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ignore.Designer.cs">
+      <DependentUpon>Ignore.cs</DependentUpon>
+    </Compile>
     <Compile Include="IgnoreRule.cs" />
     <Compile Include="JavaMethodCallAnalyzer.cs" />
     <Compile Include="JavaParseException.cs" />
@@ -68,6 +74,9 @@
     <Compile Include="SettingsManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ignore.resx">
+      <DependentUpon>Ignore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
