--- a/.NET/SimpleSqlAdjuster/SimpleSqlAdjuster.csproj
+++ b/.NET/SimpleSqlAdjuster/SimpleSqlAdjuster.csproj
@@ -57,8 +57,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogService.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="SqlAdjuster.cs" />
+    <Compile Include="SqlFormatter.cs" />
+    <Compile Include="SqlProcessingException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserSettingsService.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
