ver1.5.0 リファクタリング

--- a/.NET/SimpleGrep/SimpleGrep.csproj
+++ b/.NET/SimpleGrep/SimpleGrep.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Core\CommentFilters.cs" />
+    <Compile Include="Core\GrepEngine.cs" />
+    <Compile Include="Core\MethodSignatureResolvers.cs" />
+    <Compile Include="Core\SearchResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
