--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -70,6 +70,18 @@
     <Compile Include="JavaMethodCallAnalyzer.cs" />
     <Compile Include="JavaParseException.cs" />
     <Compile Include="MethodCallDetail.cs" />
+    <Compile Include="MethodListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MethodListForm.Designer.cs">
+      <DependentUpon>MethodListForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OtherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OtherForm.Designer.cs">
+      <DependentUpon>OtherForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsManager.cs" />
@@ -78,6 +90,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ignore.resx">
       <DependentUpon>Ignore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MethodListForm.resx">
+      <DependentUpon>MethodListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OtherForm.resx">
+      <DependentUpon>OtherForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
