--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -51,51 +51,51 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppSettings.cs" />
-    <Compile Include="ErrorLogger.cs" />
-    <Compile Include="IgnoreConditionSetting.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Infrastructure\AppSettings.cs" />
+    <Compile Include="Infrastructure\ErrorLogger.cs" />
+    <Compile Include="Core\IgnoreConditionSetting.cs" />
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ignore.cs">
+    <Compile Include="Forms\Ignore.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ignore.Designer.cs">
+    <Compile Include="Forms\Ignore.Designer.cs">
       <DependentUpon>Ignore.cs</DependentUpon>
     </Compile>
-    <Compile Include="IgnoreRule.cs" />
-    <Compile Include="JavaMethodCallAnalyzer.cs" />
-    <Compile Include="JavaParseException.cs" />
-    <Compile Include="MethodCallDetail.cs" />
-    <Compile Include="MethodDefinitionDetail.cs" />
-    <Compile Include="MethodListForm.cs">
+    <Compile Include="Core\IgnoreRule.cs" />
+    <Compile Include="Core\JavaMethodCallAnalyzer.cs" />
+    <Compile Include="Core\JavaParseException.cs" />
+    <Compile Include="Core\MethodCallDetail.cs" />
+    <Compile Include="Core\MethodDefinitionDetail.cs" />
+    <Compile Include="Forms\MethodListForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MethodListForm.Designer.cs">
+    <Compile Include="Forms\MethodListForm.Designer.cs">
       <DependentUpon>MethodListForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="OtherForm.cs">
+    <Compile Include="Forms\OtherForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OtherForm.Designer.cs">
+    <Compile Include="Forms\OtherForm.Designer.cs">
       <DependentUpon>OtherForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingsManager.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Infrastructure\SettingsManager.cs" />
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Ignore.resx">
+    <EmbeddedResource Include="Forms\Ignore.resx">
       <DependentUpon>Ignore.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MethodListForm.resx">
+    <EmbeddedResource Include="Forms\MethodListForm.resx">
       <DependentUpon>MethodListForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OtherForm.resx">
+    <EmbeddedResource Include="Forms\OtherForm.resx">
       <DependentUpon>OtherForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
