--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\InsertTagJumpForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InsertTagJumpForm.Designer.cs">
+      <DependentUpon>InsertTagJumpForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Infrastructure\AppSettings.cs" />
     <Compile Include="Infrastructure\ErrorLogger.cs" />
     <Compile Include="Infrastructure\SakuraTagJumpLauncher.cs" />
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Ignore.resx">
       <DependentUpon>Ignore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InsertTagJumpForm.resx">
+      <DependentUpon>InsertTagJumpForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MethodListForm.resx">
       <DependentUpon>MethodListForm.cs</DependentUpon>
