--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -75,9 +75,12 @@
     </Compile>
     <Compile Include="Core\IgnoreRule.cs" />
     <Compile Include="Core\JavaMethodCallAnalyzer.cs" />
+    <Compile Include="Core\JavaMethodStructure.cs" />
     <Compile Include="Core\JavaParseException.cs" />
     <Compile Include="Core\MethodCallDetail.cs" />
     <Compile Include="Core\MethodDefinitionDetail.cs" />
+    <Compile Include="Core\TagJumpEmbeddingResult.cs" />
+    <Compile Include="Core\TagJumpEmbeddingService.cs" />
     <Compile Include="Forms\MethodListForm.cs">
       <SubType>Form</SubType>
     </Compile>
