--- a/.NET/SimpleOCRforBase32/src/SimpleOCRforBase32.csproj
+++ b/.NET/SimpleOCRforBase32/src/SimpleOCRforBase32.csproj
@@ -86,5 +86,10 @@
       <Version>5.2.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="tessdata\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
