--- a/.NET/SimpleFileSearch/SimpleFileSearch.csproj
+++ b/.NET/SimpleFileSearch/SimpleFileSearch.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
+    <Compile Include="DeleteByExtensionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteByExtensionForm.Designer.cs">
+      <DependentUpon>DeleteByExtensionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +64,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DeleteByExtensionForm.resx">
+      <DependentUpon>DeleteByExtensionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
