--- a/.NET/SimpleGrep/SimpleGrep.csproj
+++ b/.NET/SimpleGrep/SimpleGrep.csproj
@@ -61,10 +61,19 @@
     <Compile Include="Core\GrepEngine.cs" />
     <Compile Include="Core\MethodSignatureResolvers.cs" />
     <Compile Include="Core\SearchResult.cs" />
+    <Compile Include="MultiKeywordsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MultiKeywordsForm.Designer.cs">
+      <DependentUpon>MultiKeywordsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MultiKeywordsForm.resx">
+      <DependentUpon>MultiKeywordsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
