ver1.5.1 タグジャンプ情報スレッド化 実装完了 未テスト

--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Core\MethodDefinitionDetail.cs" />
     <Compile Include="Core\TagJumpMethodLocator.cs" />
     <Compile Include="Core\TagJumpSyntaxHelper.cs" />
+    <Compile Include="Core\TagJumpProgressInfo.cs" />
     <Compile Include="Core\TagJumpEmbeddingResult.cs" />
     <Compile Include="Core\TagJumpFailureDetail.cs" />
     <Compile Include="Core\TagJumpEmbeddingService.cs" />
