--- a/.NET/SimpleSqlAdjuster/SimpleSqlAdjuster.csproj
+++ b/.NET/SimpleSqlAdjuster/SimpleSqlAdjuster.csproj
@@ -51,21 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LogService.cs" />
+    <Compile Include="Services\LogService.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SqlAdjuster.cs" />
-    <Compile Include="SqlFormatter.cs" />
-    <Compile Include="SqlProcessingException.cs" />
+    <Compile Include="Sql\SqlAdjuster.cs" />
+    <Compile Include="Sql\SqlFormatter.cs" />
+    <Compile Include="Sql\SqlProcessingException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserSettingsService.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Services\UserSettingsService.cs" />
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
