ver1.7.0 ファイル収集対応 テスト完了

--- a/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
+++ b/.NET/SimpleMethodCallListCreator/SimpleMethodCallListCreator.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CollectFilesService.cs" />
     <Compile Include="Forms\CollectFilesForm.cs">
       <SubType>Form</SubType>
     </Compile>
