--- a/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
+++ b/.NET/SimpleExcelGrep/SimpleExcelGrep.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ExcelInteropService.cs" />
+    <Compile Include="Services\ExcelModificationService.cs" />
     <Compile Include="Services\ExcelSearchService.cs" />
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\SettingsService.cs" />
